package cannon

import (
	"context"
	"testing"
	"time"

	"github.com/ethpandaops/xatu/pkg/proto/xatu"
	"github.com/stretchr/testify/assert"
)

func TestDefaultBeaconNodeWrapper_Interface(t *testing.T) {
	// Test that DefaultBeaconNodeWrapper implements BeaconNode interface
	var _ BeaconNode = &DefaultBeaconNodeWrapper{}

	// Create wrapper with nil beacon (for interface verification only)
	wrapper := &DefaultBeaconNodeWrapper{beacon: nil}
	assert.NotNil(t, wrapper)
}

func TestDefaultBeaconNodeWrapper_MethodDelegation(t *testing.T) {
	// Note: This test focuses on verifying method signatures and delegation patterns
	// Full integration testing would require actual ethereum.BeaconNode setup

	tests := []struct {
		name     string
		testFunc func(*testing.T, *DefaultBeaconNodeWrapper)
	}{
		{
			name: "start_method_exists",
			testFunc: func(t *testing.T, wrapper *DefaultBeaconNodeWrapper) {
				// This would call beacon.Start() if beacon was not nil
				// Testing method signature and delegation pattern
				assert.NotNil(t, wrapper)
			},
		},
		{
			name: "get_beacon_block_method_exists",
			testFunc: func(t *testing.T, wrapper *DefaultBeaconNodeWrapper) {
				// Testing method signature exists
				assert.NotNil(t, wrapper)
			},
		},
		{
			name: "get_validators_method_exists",
			testFunc: func(t *testing.T, wrapper *DefaultBeaconNodeWrapper) {
				// Testing method signature exists
				assert.NotNil(t, wrapper)
			},
		},
		{
			name: "synced_method_exists",
			testFunc: func(t *testing.T, wrapper *DefaultBeaconNodeWrapper) {
				// Testing method signature exists
				assert.NotNil(t, wrapper)
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			wrapper := &DefaultBeaconNodeWrapper{beacon: nil}
			tt.testFunc(t, wrapper)
		})
	}
}

func TestDefaultCoordinatorWrapper_Interface(t *testing.T) {
	// Test that DefaultCoordinatorWrapper implements Coordinator interface
	var _ Coordinator = &DefaultCoordinatorWrapper{}

	wrapper := &DefaultCoordinatorWrapper{client: nil}
	assert.NotNil(t, wrapper)
}

func TestDefaultCoordinatorWrapper_StartStop(t *testing.T) {
	wrapper := &DefaultCoordinatorWrapper{client: nil}

	// Test Start method (should not fail)
	err := wrapper.Start(context.Background())
	assert.NoError(t, err, "Start should not fail for coordinator wrapper")

	// Test Stop method (should not fail)
	err = wrapper.Stop(context.Background())
	assert.NoError(t, err, "Stop should not fail for coordinator wrapper")
}

func TestDefaultCoordinatorWrapper_MethodSignatures(t *testing.T) {
	wrapper := &DefaultCoordinatorWrapper{client: nil}

	// Test that methods exist with correct signatures
	// Note: These would panic with nil client, which is expected behavior for delegation pattern
	ctx := context.Background()

	// Test GetCannonLocation signature - should panic with nil client
	assert.Panics(t, func() {
		_, _ = wrapper.GetCannonLocation(ctx, xatu.CannonType_BEACON_API_ETH_V2_BEACON_BLOCK, "mainnet")
	}, "Should panic with nil client")

	// Test UpsertCannonLocationRequest signature - should panic with nil client
	location := &xatu.CannonLocation{
		Type:      xatu.CannonType_BEACON_API_ETH_V2_BEACON_BLOCK,
		NetworkId: "mainnet",
	}
	assert.Panics(t, func() {
		_ = wrapper.UpsertCannonLocationRequest(ctx, location)
	}, "Should panic with nil client")
}

func TestDefaultScheduler_Interface(t *testing.T) {
	// Test that DefaultScheduler implements Scheduler interface
	var _ Scheduler = &DefaultScheduler{}

	scheduler := &DefaultScheduler{scheduler: nil}
	assert.NotNil(t, scheduler)
}

func TestDefaultScheduler_Methods(t *testing.T) {
	scheduler := &DefaultScheduler{scheduler: nil}

	// Test Start method (should panic with nil scheduler due to delegation)
	assert.Panics(t, func() {
		scheduler.Start()
	}, "Start should panic with nil scheduler")

	// Test Shutdown method (should panic with nil scheduler due to delegation)
	assert.Panics(t, func() {
		_ = scheduler.Shutdown()
	}, "Shutdown should panic with nil scheduler")

	// Test NewJob method (not implemented)
	job, err := scheduler.NewJob("definition", "task")
	assert.Nil(t, job)
	assert.EqualError(t, err, "not implemented")
}

func TestDefaultTimeProvider_Interface(t *testing.T) {
	// Test that DefaultTimeProvider implements TimeProvider interface
	var _ TimeProvider = &DefaultTimeProvider{}

	provider := &DefaultTimeProvider{}
	assert.NotNil(t, provider)
}

func TestDefaultTimeProvider_Operations(t *testing.T) {
	provider := &DefaultTimeProvider{}

	// Test Now method
	now := provider.Now()
	assert.False(t, now.IsZero(), "Now should return valid time")
	assert.True(t, time.Since(now) < time.Second, "Now should return recent time")

	// Test Since method
	pastTime := time.Now().Add(-time.Hour)
	since := provider.Since(pastTime)
	assert.True(t, since > 50*time.Minute, "Since should return approximately 1 hour")
	assert.True(t, since < 70*time.Minute, "Since should be reasonable")

	// Test Until method
	futureTime := time.Now().Add(time.Hour)
	until := provider.Until(futureTime)
	assert.True(t, until > 50*time.Minute, "Until should return approximately 1 hour")
	assert.True(t, until < 70*time.Minute, "Until should be reasonable")

	// Test After method
	afterChan := provider.After(time.Millisecond)
	assert.NotNil(t, afterChan, "After should return channel")

	// Wait briefly to ensure channel works
	select {
	case <-afterChan:
		// Expected - timer should fire
	case <-time.After(100 * time.Millisecond):
		t.Error("After channel should have fired within 100ms")
	}
}

func TestDefaultTimeProvider_Sleep(t *testing.T) {
	provider := &DefaultTimeProvider{}

	// Test Sleep method (brief sleep to avoid slowing tests)
	start := time.Now()
	provider.Sleep(10 * time.Millisecond)
	elapsed := time.Since(start)

	assert.True(t, elapsed >= 10*time.Millisecond, "Sleep should wait at least the specified duration")
	assert.True(t, elapsed < 50*time.Millisecond, "Sleep should not wait excessively long")
}

func TestDefaultNTPClient_Interface(t *testing.T) {
	// Test that DefaultNTPClient implements NTPClient interface
	var _ NTPClient = &DefaultNTPClient{}

	client := &DefaultNTPClient{}
	assert.NotNil(t, client)
}

func TestDefaultNTPClient_Query(t *testing.T) {
	client := &DefaultNTPClient{}

	// Test with invalid host (should fail gracefully)
	response, err := client.Query("invalid.ntp.host.test")
	assert.Error(t, err, "Query should fail for invalid host")
	assert.Nil(t, response, "Response should be nil on error")

	// Note: We don't test with real NTP servers in unit tests to avoid:
	// 1. Network dependencies
	// 2. Test flakiness
	// 3. External service calls
	// Production testing would use integration tests with real NTP servers
}

func TestDefaultNTPResponse_Interface(t *testing.T) {
	// Test that DefaultNTPResponse implements NTPResponse interface
	var _ NTPResponse = &DefaultNTPResponse{}

	response := &DefaultNTPResponse{response: nil}
	assert.NotNil(t, response)
}

func TestDefaultNTPResponse_Methods(t *testing.T) {
	response := &DefaultNTPResponse{response: nil}

	// Test Validate method (should panic with nil response due to delegation)
	assert.Panics(t, func() {
		_ = response.Validate()
	}, "Validate should panic with nil response")

	// Test ClockOffset method (should panic with nil response due to field access)
	assert.Panics(t, func() {
		_ = response.ClockOffset()
	}, "ClockOffset should panic with nil response")
}

func TestWrapper_ErrorConstants(t *testing.T) {
	// Test that error constants are defined
	assert.NotNil(t, ErrConfigRequired)
	assert.NotNil(t, ErrNotImplemented)

	assert.Equal(t, "config is required", ErrConfigRequired.Error())
	assert.Equal(t, "not implemented", ErrNotImplemented.Error())
}

func TestWrapper_InterfaceCompliance(t *testing.T) {
	// Verify all wrappers implement their expected interfaces
	tests := []struct {
		name      string
		wrapper   interface{}
		checkFunc func(*testing.T, interface{})
	}{
		{
			name:    "DefaultBeaconNodeWrapper implements BeaconNode",
			wrapper: &DefaultBeaconNodeWrapper{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(BeaconNode)
				assert.True(t, ok, "DefaultBeaconNodeWrapper should implement BeaconNode")
			},
		},
		{
			name:    "DefaultCoordinatorWrapper implements Coordinator",
			wrapper: &DefaultCoordinatorWrapper{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(Coordinator)
				assert.True(t, ok, "DefaultCoordinatorWrapper should implement Coordinator")
			},
		},
		{
			name:    "DefaultScheduler implements Scheduler",
			wrapper: &DefaultScheduler{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(Scheduler)
				assert.True(t, ok, "DefaultScheduler should implement Scheduler")
			},
		},
		{
			name:    "DefaultTimeProvider implements TimeProvider",
			wrapper: &DefaultTimeProvider{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(TimeProvider)
				assert.True(t, ok, "DefaultTimeProvider should implement TimeProvider")
			},
		},
		{
			name:    "DefaultNTPClient implements NTPClient",
			wrapper: &DefaultNTPClient{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(NTPClient)
				assert.True(t, ok, "DefaultNTPClient should implement NTPClient")
			},
		},
		{
			name:    "DefaultNTPResponse implements NTPResponse",
			wrapper: &DefaultNTPResponse{},
			checkFunc: func(t *testing.T, w interface{}) {
				_, ok := w.(NTPResponse)
				assert.True(t, ok, "DefaultNTPResponse should implement NTPResponse")
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			tt.checkFunc(t, tt.wrapper)
		})
	}
}

func TestWrapper_ConstructorPatterns(t *testing.T) {
	// Test wrapper construction patterns (even with nil dependencies)

	t.Run("beacon_node_wrapper_construction", func(t *testing.T) {
		wrapper := &DefaultBeaconNodeWrapper{beacon: nil}
		assert.NotNil(t, wrapper)
		assert.Nil(t, wrapper.beacon)
	})

	t.Run("coordinator_wrapper_construction", func(t *testing.T) {
		wrapper := &DefaultCoordinatorWrapper{client: nil}
		assert.NotNil(t, wrapper)
		assert.Nil(t, wrapper.client)
	})

	t.Run("scheduler_construction", func(t *testing.T) {
		scheduler := &DefaultScheduler{scheduler: nil}
		assert.NotNil(t, scheduler)
		assert.Nil(t, scheduler.scheduler)
	})

	t.Run("time_provider_construction", func(t *testing.T) {
		provider := &DefaultTimeProvider{}
		assert.NotNil(t, provider)
	})

	t.Run("ntp_client_construction", func(t *testing.T) {
		client := &DefaultNTPClient{}
		assert.NotNil(t, client)
	})

	t.Run("ntp_response_construction", func(t *testing.T) {
		response := &DefaultNTPResponse{response: nil}
		assert.NotNil(t, response)
		assert.Nil(t, response.response)
	})
}
